# Flowbite

./: .gitignore  .sesskey  README.md  fastbite.toml  franken.py  main.py  pyproject.toml  settings.ini
_proc/: index.ipynb
_proc/_docs/: robots.txt
app/: .sesskey  component_registry.py  home.py  main.py  navigation.py  route_collector.py  theme_switcher.py  typography.py  utils.py
app/extracted/: accordion.py  accordions.py  alerts.py  arcicle.py  avatar.py  badge.py  banner.py  blockquote.py  bottom_navigation.py  breadcrumb.py  button.py  button_group.py  buttons.py  card.py  carousel.py  chat_bubble.py  checkbox.py  clipboard.py  datepicker.py  device_mockups.py  drawer.py  dropdowns.py  file_input.py  floating_label.py  footer.py  gallery.py  geting_started.py  headings.py  hr.py  images.py  indicators.py  input_field.py  jumbotron.py  kbd.py  links.py  list_group.py  lists.py  mega_menu.py  modal.py  navbar.py  (+28 more)
app/pages/: accordion.py  article.py  badge.py  buttons.py  containers.py  dropdown.py  forms.py  icons.py  input_fields.py  input_fields_showcase.py  markdown.py  modals.py  navigation.py  playground.py  progress.py  ranges.py  routes.py  skeleton.py  slider.py  tables.py  tabs.py  templates.py  themes.py  typography.py
assets/: tailwind.config.js
assets/css/: custom_theme.css  fonts.css  franken.min.css  input.css  (+1 more)
components/: buttons.py  theme.py
docs/: card_component_implementation.md  implementation_priorities.md  suggestions.md  tasks.md
documents/: franken_components.md  franken_to_fastbite_comparison.md  implementation_priorities.md
fastbite/: __init__.py  _modidx.py  all.py  article.py  badges.py  base.py  base_styles.py  blockquote.py  buttons.py  cli.py  components.py  config.py  containers.py  core.py  divider.py  dropdown.py  forms.py  markdown.py  media.py  modals.py  navigation.py  progress.py  ranges.py  skeleton.py  slider.py  tables.py  tabs.py  upload.py
fh_flowbite/: _modidx.py  components.py  franken.py  input_fields.py
nbs/: .sesskey  00_core.ipynb  01_base_styles.ipynb  01_flowbite.ipynb  02_base.ipynb  03_media.ipynb  04_blockquote.ipynb  05_containers.ipynb  06_buttons.ipynb  07_forms.ipynb  08_divider.ipynb  09_article.ipynb  10_tabs.ipynb  11_upload.ipynb  12_range.ipynb  13_badges.ipynb  14_modals.ipynb  15_progress.ipynb  16_skeleton.ipynb  17_dropdown.ipynb  18_navigation.ipynb  19_slider.ipynb  20_tables.ipynb  21_markdown.ipynb  index.ipynb  motest.py  nbdev.yml
scripts/: README.md  extract_ft_components.py  html2ft.py
(+38 files in other folders)
