[project]
name="Flowbite"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikola Dendic", email = "ndendic@gmail.com" }
]
requires-python=">=3.7"
license = { text = "Apache Software License 2.0" }

dynamic = [
    "keywords",
    "classifiers",
    "entry-points",
    "optional-dependencies",
    "version",
]

dependencies = [
    "fastwand>=0.1.31",
    "ft-datastar",
    "mistletoe>=1.4.0",
    "monsterui>=1.0.10",
    "python-fasthtml>=0.12.1",
]

[tool.uv.sources]
flowbite = { workspace = true }
ft-datastar = { git = "https://github.com/banditburai/ft-datastar.git" }

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbdev>=2.3.35",
]
