[project]
name="Fastbite"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikola Dendic", email = "ndendic@gmail.com" }
]
requires-python=">=3.11"
license = { text = "Apache Software License 2.0" }

dynamic = [
    "keywords",
    "classifiers",
    "entry-points",
    "optional-dependencies",
    "version",
]

dependencies = [
    "mistletoe>=1.4.0",
    "python-fasthtml>=0.12.1",
    "typer>=0.15.2",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]

[project.scripts]
fastbite = "fastbite.cli:app"

[tool.uv.sources]
flowbite = { workspace = true }
ft-datastar = { git = "https://github.com/banditburai/ft-datastar.git" }

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "logfire>=3.12.0",
    "nbdev>=2.3.35",
]
